// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserAvatar /> renders correctly 1`] = `
<span
  className="UserAvatar__UserAvatarContainer-jxoNlw imfDjz mr-10"
  hasBadge={false}
>
  <div
    className="sc-bcXGCL dwHWgm sc-ckEbfr bTnJLR cap-avatar"
  >
    <img
      alt="toto"
      className="sc-bcXGCL kuwHrv"
      src="http://media12/profileAvatar.jpg"
    />
  </div>
</span>
`;

exports[`<UserAvatar /> renders correctly user without avatar 1`] = `
<span
  className="UserAvatar__UserAvatarContainer-jxoNlw imfDjz"
  hasBadge={false}
>
  <div
    className="sc-bcXGCL dwHWgm sc-ckEbfr bTnJLR cap-avatar"
  >
    t
  </div>
</span>
`;

exports[`<UserAvatar /> renders correctly with custom default avatar 1`] = `
<span
  className="UserAvatar__UserAvatarContainer-jxoNlw imfDjz"
  hasBadge={false}
>
  <div
    className="sc-bcXGCL dwHWgm sc-ckEbfr bCwZSC cap-avatar"
  >
    t
  </div>
</span>
`;

exports[`<UserAvatar /> renders correctly with default avatar needed 1`] = `
<span
  className="UserAvatar__UserAvatarContainer-jxoNlw imfDjz mr-10"
  hasBadge={false}
>
  <div
    className="sc-bcXGCL dwHWgm sc-ckEbfr bTnJLR cap-avatar"
  >
    <img
      alt="toto"
      className="sc-bcXGCL kuwHrv"
      src="http://media12/profileAvatar.jpg"
    />
  </div>
</span>
`;
